@@ -35,8 +35,8 @@ final class CMS_Content_Block
 {
     private static $_priority;
     private static $_contentBlocks;
-    private static $_primary_content;
-    private static $_primary_content_flag;
+    private static $_primary_content;    // generated by preprocess_mact
+    private static $_primary_content_flag; // indicates that content has been generated once, do not repeat.  ready by preprocess_mact and here.
     private function __construct() {}
 
     private static function content_return($result, &$params, &$smarty)
@@ -48,6 +48,11 @@ final class CMS_Content_Block
         else {
             echo $result;
         }
+    }
+
+    public static function has_primary_content()
+    {
+        return self::$_primary_content_flag;
     }
 
     public static function set_primary_content($txt)
@@ -135,11 +140,6 @@ final class CMS_Content_Block
             $rec['priority'] = self::$_priority++;
         }
 
-        /*
-        // check for duplicate.
-        if( isset(self::$_contentBlocks[$rec['name']]) ) throw new CmsEditContentException('Duplicate content block: '.$rec['name']);
-        */
-
         // set priority
         if( empty($rec['priority']) || $rec['priority'] == 0 ) {
             if( !self::$_priority ) self::$_priority = 100;
@@ -185,11 +185,6 @@ final class CMS_Content_Block
             if( !self::$_priority ) self::$_priority = 100;
             $rec['priority'] = self::$_priority++;
         }
-
-        /*
-        // check for duplicate.
-        if( isset(self::$_contentBlocks[$rec['name']]) ) throw new CmsEditContentException('Duplicate content block: '.$rec['name']);
-        */
 
         // set priority
         if( empty($rec['priority']) || !$rec['priority'] ) {
@@ -317,6 +312,7 @@ final class CMS_Content_Block
                 }
                 $smarty->caching = $oldvalue;
             }
+            self::$_primary_content_flag = true;
         }
         return self::content_return($result, $params, $smarty);
     }
